--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <script type="text/javascript" src="libs/phaser.min.js"></script>
-    <script type="text/javascript" src="libs/easystar-0.3.0.min.js"></script>
-    <title>little phaser game with easystarjs</title>
+	<meta charset="utf-8" />
+	<title>GitHubGameOff2017</title>
+	<style type="text/css">
+	   * {
+		  margin: 0;
+		  padding: 0;
+		}
+	</style>
+  <meta name="viewport" content="initial-scale=1 user-scalable=no" />
+  <script type="text/javascript" src="libs/phaser.min.js"></script>
+  <script type="text/javascript" src="libs/easystar-0.3.0.min.js"></script>
+  <script type="text/javascript" src="game.js"></script>
 </head>
 <body>
-    <div id='game'></div>
-    <a href="https://github.com/reneromain/GitHubGameOff">Fork me !</a>
+
 </body>
-<script src="js/menu.js" type="text/javascript"></script>
-<script src="js/game.js" type="text/javascript"></script>
-<script src="js/win.js" type="text/javascript"></script>
-<script src="js/main.js" type="text/javascript"></script>
 </html>
